<resources>
    <string name="app_name">BDOShip</string>
    <string name="welcome_to">Welcome To</string>
    <string name="no_prog">Currently you didn’t have any ship progress</string>
    <string name="add">Add Progress</string>
    <string name="shipsprog">Your Ship Progress</string>
    <string name="shiptype">shiptype</string>
    <string name="whatship">What Ship You want to make?</string>
    <string name="speed">Speed : </string>
    <string name="turn">Turn : </string>
    <string name="accel">Accel : </string>
    <string name="brake">Brake : </string>
    <string name="lt">Lt : </string>
    <string name="inv">Inventory Slot : </string>
    <string name="cabins">Crew Cabins : </string>
    <string name="cannonballs">Cannonballs : </string>
    <string name="cannon">Cannons : </string>
    <string name="reload">Reload Time : </string>
    <string name="percentage">175%</string>
    <string name="digit2">99</string>
    <string name="digit3">999</string>
    <string name="digit5">99999</string>
    <string name="by">Created by Karata (SEA)</string>
    <string name="mats_name">Deep Tide-Dyed Standardized Timber Square</string>
    <string name="have">Have</string>
    <string name="need">Need</string>
    <string name="dailies">Dailies Left</string>
    <string name="coins">Material Price</string>
    <string name="how">How To Get</string>
    <string name="dLefttext">Dailies Left :</string>
    <string name="progresstext">Progress :</string>
    <string name="days">Days</string>
    
</resources>
