<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ship_detail"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ship_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            />

        <TextView
            android:id="@+id/shiptype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/ship_icon"
            android:text="Epheria Improved Sailboat"
            android:textColor="#000000"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/speed"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/shiptype"
            android:layout_toEndOf="@id/ship_icon"
            />

        <TextView
            android:id="@+id/ship_speed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/speed"
            android:layout_below="@id/shiptype"
            android:text="@string/percentage"
            />

        <TextView
            android:id="@+id/turn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/speed"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ship_icon"
            android:text="@string/turn"
            />

        <TextView
            android:id="@+id/ship_turn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ship_speed"
            android:layout_toEndOf="@id/turn"
            android:text="@string/percentage"
            />

        <TextView
            android:id="@+id/accel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/shiptype"
            android:layout_toLeftOf="@id/ship_accel"
            android:text="@string/accel"
            />

        <TextView
            android:id="@+id/ship_accel"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/percentage"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/shiptype"
            />

        <TextView
            android:id="@+id/brake"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel"
            android:layout_toLeftOf="@id/ship_brake"
            android:text="@string/brake"
            />

        <TextView
            android:id="@+id/ship_brake"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:layout_marginRight="@dimen/dp10"
            android:layout_below="@id/ship_accel"
            android:layout_alignParentEnd="true"
            />

            <RelativeLayout
                android:id="@+id/belowstat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ship_icon"
                android:paddingHorizontal="@dimen/dp10">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:text="@string/lt"
                    android:layout_marginTop="10dp"
                />

                <TextView
                    android:id="@+id/ship_lt"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_toEndOf="@id/weight"
                    android:layout_marginTop="10dp"
                />

                <TextView
                    android:id="@+id/inventory"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:text="@string/inv"
                    android:layout_below="@id/weight"
                />

                <TextView
                    android:id="@+id/ship_inv"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_below="@id/ship_lt"
                    android:layout_toEndOf="@id/inventory"
                />

                <TextView
                    android:id="@+id/cabins"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:text="@string/cabins"
                    android:layout_below="@id/inventory"
                />

                <TextView
                    android:id="@+id/ship_cabins"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_below="@id/ship_inv"
                    android:layout_toEndOf="@id/cabins"
                />

                <TextView
                    android:id="@+id/cballs"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp50"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@id/ship_cballs"
                    android:text="@string/cannonballs" />

                <TextView
                    android:id="@+id/ship_cballs"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                />

                <TextView
                    android:id="@+id/cannons"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:text="@string/cannon"
                    android:layout_below="@id/cballs"
                    android:layout_marginStart="@dimen/dp50"
                    android:layout_toLeftOf="@id/ship_cannons"
                />

                <TextView
                    android:id="@+id/ship_cannons"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_below="@id/ship_lt"
                    android:layout_alignParentEnd="true"
                />

                <TextView
                    android:id="@+id/reload"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:text="@string/reload"
                    android:layout_below="@id/cannons"
                    android:layout_marginStart="@dimen/dp50"
                    android:layout_toLeftOf="@id/ship_reload"
                />

                <TextView
                    android:id="@+id/ship_reload"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:text="@string/digit5"
                    android:layout_below="@id/ship_cannons"
                    android:layout_alignParentEnd="true"
                />

            </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>