<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/owned_list"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ship_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            />

        <TextView
            android:id="@+id/owned_shiptype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/ship_icon"
            android:text="Epheria Improved Sailboat"
            android:textColor="#000000"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/dLeft"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dLefttext"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/owned_shiptype"
            android:layout_toEndOf="@id/ship_icon"
            />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/dLeft"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ship_icon"
            android:text="@string/progresstext"
            />

        <TextView
            android:id="@+id/owned_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/owned_shiptype"
            android:layout_toLeftOf="@id/textdays"
            android:text="@string/digit2"
            />

        <TextView
            android:id="@+id/textdays"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/dp30"
            android:text="@string/days"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/owned_shiptype"
            />

        <TextView
            android:id="@+id/owned_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/owned_days"
            android:layout_toLeftOf="@id/percenttext"
            android:text="@string/digit2"
            />

        <TextView
            android:id="@+id/percenttext"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="%"
            android:layout_marginRight="@dimen/dp30"
            android:layout_below="@id/textdays"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>