<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/mat_icon"
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                />
            <TextView
                android:id="@+id/material_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="14sp"
                android:text="@string/mats_name"
                app:layout_constraintStart_toEndOf="@id/mat_icon"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/mats_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/percentage"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_name">

                <TextView
                    android:id="@+id/have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:fontFamily="sans-serif"
                    android:text="@string/have"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="40dp"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/roundedbtn10"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:layout_marginTop="14dp"
                    android:textSize="8sp"
                    app:layout_constraintRight_toLeftOf="@id/mats_have"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <EditText
                    android:id="@+id/mats_have"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp40"
                    android:textSize="15sp"
                    android:hint="0"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/need"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/need"
                    app:layout_constraintTop_toBottomOf="@id/have">
                </TextView>

                <TextView
                    android:id="@+id/mats_need"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp25"
                    android:text="@string/digit3"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"
                    app:layout_constraintTop_toBottomOf="@+id/mats_have"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/dailies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/dailies"
                    app:layout_constraintTop_toBottomOf="@id/need">
                </TextView>

                <TextView
                    android:id="@+id/mats_dailies"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp25"
                    android:text="@string/digit3"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"
                    app:layout_constraintTop_toBottomOf="@+id/mats_need"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/coins"
                    app:layout_constraintTop_toBottomOf="@id/dailies">
                </TextView>

                <TextView
                    android:id="@+id/mats_coins"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp25"
                    android:text="@string/digit3"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"
                    app:layout_constraintTop_toBottomOf="@+id/mats_dailies"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>